--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,32 @@
-Flask
-datetime
-uuid
-Flask-SQLAlchemy
-PyJWT
+
+﻿alembic==1.4.2
+autoenv==1.0.0
+certifi==2020.4.5.1
+chardet==3.0.4
+click==7.1.2
+DateTime==4.3
+dnspython==1.16.0
+email-validator==1.1.1
+Flask==1.1.2
+Flask-Login==0.5.0
+Flask-Migrate==2.5.3
+Flask-SQLAlchemy==2.4.3
+Flask-WTF==0.14.3
+idna==2.9
+itsdangerous==1.1.0
+Jinja2==2.11.2
+Mako==1.1.3
+MarkupSafe==1.1.1
+PyJWT==1.7.1
+python-dateutil==2.8.1
+python-dotenv==0.13.0
+python-editor==1.0.4
+pytz==2020.1
+requests==2.23.0
+six==1.15.0
+SQLAlchemy==1.3.17
+urllib3==1.25.9
+uuid==1.30
+Werkzeug==1.0.1
+WTForms==2.3.1
+zope.interface==5.1.0
